# stepanov

./: CMakeLists.txt
lecture1/: CMakeLists.txt  count_operations.cpp  count_operations.h  count_operations_normalized.cpp  functorized.h  instrumented.cpp  instrumented.h  setsort.h  table_util.h
lecture2/: CMakeLists.txt  singleton.cpp  singleton.h
lecture3/: CMakeLists.txt  count_operations.cpp  count_operations.h  count_operations_normalized.cpp  functorized.h  instrumented.cpp  instrumented.h  iota.h  singleton.h  table_util.h
lecture4/: CMakeLists.txt  example.cpp  min.h  swap.h
lecture5/: CMakeLists.txt  algorithm.h  concepts.h  minmax.cpp  minmax.h  timed.h
lecture6/: CMakeLists.txt
lecture9/: ._min.cpp
