cmake_minimum_required(VERSION 3.4)
project(stepanov)

#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=gnu++0x")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")

add_subdirectory(lecture1)
add_subdirectory(lecture2)
add_subdirectory(lecture3)
add_subdirectory(lecture4)
add_subdirectory(lecture5)
#add_subdirectory(lecture6)
